--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2137,7 +2137,7 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "new_print" = "Yeni Baskı Oluştur";
 "print_info_popup_title" = "%d Adet Fotoğraf Seç";
-"print_info_popup_subtitle" = "Bu ay bastırmak için maximum %d fotoğraf seç ve hemen evine gelsin.";
+"print_info_popup_subtitle" = "Bu ay bastırmak için maximum %d fotoğraf seç ve hemen adresine ücretsiz gelsin.";
 "print_info_popup_checkbox" = "Bu uyarıyı bir daha gösterme.";
 
 /*Fuzzy*/
@@ -2184,8 +2184,6 @@ then {11,99 TRY/Month}*/
 "no_more_photo_right" = "%d’ten fazla fotoğraf seçtin. Devam edebilmek için azaltın.";
 "timeline_header" = "%d en güzel anıları";
 "timeline_description" = "{timeline_year} yılının en güzel anılarını senin için derledik. Hemen keşfet.";
-"timeline_header" = "2023’un en güzel anıları";
-"timeline_description" = "Bu senenin en güzel anılarını senin için derledik. Hemen keşfet.";
 "selected_for_print" = "Baskı için seçilenler";
 "print_cancel_popup_question" = "İptal etmek isteğine emin misin?";
 "print_cancel_popup_info" = "Basılı albüm için seçtiğin tüm fotoğraf düzenlemelerin silinecektir. Yeniden fotoğraf seçmen ve yeniden düzenlemen gereklidir.";
@@ -2196,7 +2194,7 @@ then {11,99 TRY/Month}*/
 "send_print_popup_title" = "Seçtiğin Fotoğraflar Baskıya Hazır";
 
 /*Fuzzy*/
-"send_print_popup_address" = "Fotoğrafların basılı olarak; \"%@ Mahallesi %@ Sokak No:%@ Daire:%@ %@/%@, %d\" adresine ücretsiz gönderilecektir.";
+"send_print_popup_address" = "Fotoğrafların basılı olarak; \"%@ Mahallesi %@ No:%@ Daire:%@ %@/%@, %d\" adresine ücretsiz gönderilecektir.";
 "send_print_popup_info" = "Baskıya gönderilmesi durumunda bu işlem iptal edilemez.";
 "address_title" = "Adres Başlığı";
 "address_city" = "İl";
@@ -2227,7 +2225,6 @@ then {11,99 TRY/Month}*/
 "order_delivered_cargo" = "Siparişin Kargoya Verildi";
 "order_delivered" = "Siparişin Teslim Edildi";
 "order_undelivered" = "Siparişin Teslim Edilemedi";
-"grace_banner_paycell_text" = "lifebox paketinin yenilenmesi icin Paycell kart bakiyeni ve elektronik ticarete acik oldugunu kontrol edin. Farklı bir kredi kartı ile paket satın alabilirsiniz.";
 "order_detail_popup_name" = "Baskı Sipariş Takip";
 
 /*Fuzzy*/
@@ -2274,3 +2271,5 @@ then {11,99 TRY/Month}*/
 "print_file_limit_exceeded_error" = "Fotoğraf limiti aşıldı.";
 "order_not_delivered" = "Siparişin Baskıya Teslim Edilemedi";
 "order_not_delivered_detail" = "Siparişin teknik nedenlerden dolayı baskıya teslim edilemedi. Lütfen tekrar yeni baskı gönderiniz.";
+"grace_banner_paycell_text" = "";
+"sync_page_offer_pop_up" = "Sana özel avantajlı lifebox paketlerini keşfetmek için hemen tıkla!";
