--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2301,7 +2301,7 @@ then {11,99 TRY/Month}*/
 "print" = "Baskı";
 
 /*Fuzzy*/
-"photo_max_selection_title" = "%@ Adet Fotograf Baskıya Gönderebilirsin";
+"photo_max_selection_title" = "%@ Fotoğraf Hakkın Bulunuyor";
 
 /*Fuzzy*/
 "photo_max_selection_body" = "En fazla %@ adet fotoğraf baskıya gönderebilirsin.";
